| Summary: | ASTERISK-29755: frame: Fix for Doxygen | ||
| Reporter: | Alexander Traud (traud) | Labels: | |
| Date Opened: | 2021-11-17 04:28:50.000-0600 | Date Closed: | 2021-11-18 16:12:35.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | . I did not set the category correctly. |
| Versions: | 16.22.0 18.8.0 19.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If all {{WARN_}} are enabled in the file {{doc/asterisk-ng-doxygen.in}}, the following appears in the file {{doxygen.log}}:
{code} include/asterisk/frame.h:549: warning: argument 'source' of command @param is not found in the argument list of ast_frame_free(struct ast_frame *fr, int cache) include/asterisk/frame.h:549: warning: argument 'source' of command @param is not found in the argument list of ast_frame_free(struct ast_frame *fr, int cache) main/audiohook.c:594: warning: documented empty return type of ast_audiohook_detach_list include/asterisk/audiohook.h:157: warning: argument 'direction' of command @param is not found in the argument list of ast_audiohook_read_frame_all(struct ast_audiohook *audiohook, size_t samples, struct ast_format *format, struct ast_frame **read_frame, struct ast_frame **write_frame) include/asterisk/audiohook.h:241: warning: argument 'audiohook' of command @param is not found in the argument list of ast_audiohook_write_list_empty(struct ast_audiohook_list *audiohook_list) main/audiohook.c:1112: warning: The following parameter of ast_audiohook_write_list_empty(struct ast_audiohook_list *audiohook_list) is not documented: parameter 'audiohook_list' main/audiohook.c:1241: warning: documented empty return type of audiohook_volume_destroy include/asterisk/audiohook.h:186: warning: documented empty return type of ast_audiohook_detach_list include/asterisk/audiohook.h:224: warning: argument 'chan' from the argument list of ast_audiohook_detach_source has multiple @param documentation sections include/asterisk/audiohook.h:224: warning: argument 'source' from the argument list of ast_audiohook_detach_source has multiple @param documentation sections main/audiohook.c:102: warning: argument 'init' of command @param is not found in the argument list of ast_audiohook_init(struct ast_audiohook *audiohook, enum ast_audiohook_type type, const char *source, enum ast_audiohook_init_flags init_flags) include/asterisk/audiohook.h:132: warning: argument 'audiohook' from the argument list of ast_audiohook_init has multiple @param documentation sections include/asterisk/audiohook.h:132: warning: argument 'type' from the argument list of ast_audiohook_init has multiple @param documentation sections include/asterisk/audiohook.h:132: warning: argument 'source' from the argument list of ast_audiohook_init has multiple @param documentation sections include/asterisk/audiohook.h:155: warning: argument 'audiohook' from the argument list of ast_audiohook_read_frame has multiple @param documentation sections include/asterisk/audiohook.h:155: warning: argument 'samples' from the argument list of ast_audiohook_read_frame has multiple @param documentation sections include/asterisk/audiohook.h:155: warning: argument 'direction' from the argument list of ast_audiohook_read_frame has multiple @param documentation sections include/asterisk/audiohook.h:155: warning: argument 'format' from the argument list of ast_audiohook_read_frame has multiple @param documentation sections include/asterisk/audiohook.h:157: warning: argument 'ast_format' of command @param is not found in the argument list of ast_audiohook_read_frame_all(struct ast_audiohook *audiohook, size_t samples, struct ast_format *format, struct ast_frame **read_frame, struct ast_frame **write_frame) include/asterisk/audiohook.h:157: warning: argument 'direction' of command @param is not found in the argument list of ast_audiohook_read_frame_all(struct ast_audiohook *audiohook, size_t samples, struct ast_format *format, struct ast_frame **read_frame, struct ast_frame **write_frame) include/asterisk/audiohook.h:157: warning: argument 'direction' of command @param is not found in the argument list of ast_audiohook_read_frame_all(struct ast_audiohook *audiohook, size_t samples, struct ast_format *format, struct ast_frame **read_frame, struct ast_frame **write_frame) include/asterisk/audiohook.h:166: warning: argument 'audiohook' from the argument list of ast_audiohook_read_frame_all has multiple @param documentation sections include/asterisk/audiohook.h:166: warning: argument 'samples' from the argument list of ast_audiohook_read_frame_all has multiple @param documentation sections include/asterisk/audiohook.h:166: warning: argument 'read_frame' from the argument list of ast_audiohook_read_frame_all has multiple @param documentation sections include/asterisk/audiohook.h:166: warning: argument 'write_frame' from the argument list of ast_audiohook_read_frame_all has multiple @param documentation sections include/asterisk/audiohook.h:339: warning: argument 'chan' from the argument list of ast_audiohook_set_mute has multiple @param documentation sections include/asterisk/audiohook.h:339: warning: argument 'source' from the argument list of ast_audiohook_set_mute has multiple @param documentation sections include/asterisk/audiohook.h:339: warning: argument 'flag' from the argument list of ast_audiohook_set_mute has multiple @param documentation sections include/asterisk/audiohook.h:339: warning: argument 'clear' from the argument list of ast_audiohook_set_mute has multiple @param documentation sections include/asterisk/audiohook.h:263: warning: argument 'audiohook' from the argument list of ast_audiohook_update_status has multiple @param documentation sections include/asterisk/audiohook.h:329: warning: argument 'chan' from the argument list of ast_audiohook_volume_adjust has multiple @param documentation sections include/asterisk/audiohook.h:329: warning: argument 'direction' from the argument list of ast_audiohook_volume_adjust has multiple @param documentation sections include/asterisk/audiohook.h:329: warning: argument 'volume' from the argument list of ast_audiohook_volume_adjust has multiple @param documentation sections include/asterisk/audiohook.h:319: warning: argument 'chan' from the argument list of ast_audiohook_volume_get has multiple @param documentation sections include/asterisk/audiohook.h:319: warning: argument 'direction' from the argument list of ast_audiohook_volume_get has multiple @param documentation sections include/asterisk/audiohook.h:310: warning: argument 'chan' from the argument list of ast_audiohook_volume_set has multiple @param documentation sections include/asterisk/audiohook.h:310: warning: argument 'direction' from the argument list of ast_audiohook_volume_set has multiple @param documentation sections include/asterisk/audiohook.h:310: warning: argument 'volume' from the argument list of ast_audiohook_volume_set has multiple @param documentation sections include/asterisk/audiohook.h:241: warning: argument 'audiohook' of command @param is not found in the argument list of ast_audiohook_write_list_empty(struct ast_audiohook_list *audiohook_list) include/asterisk/audiohook.h:245: warning: The following parameter of ast_audiohook_write_list_empty(struct ast_audiohook_list *audiohook_list) is not documented: parameter 'audiohook_list' main/framehook.c:132: warning: return value 'On' of ast_framehook_attach has multiple documentation sections main/framehook.c:287: warning: The following parameter of ast_framehook_list_contains_no_active_of_type(struct ast_framehook_list *framehooks, enum ast_frame_type type) is not documented: parameter 'type' include/asterisk/framehook.h:216: warning: argument 'The' of command @param is not found in the argument list of ast_framehook_chan_fixup_callback(void *data, int framehook_id, struct ast_channel *old_chan, struct ast_channel *new_chan) include/asterisk/framehook.h:216: warning: argument 'The' of command @param is not found in the argument list of ast_framehook_chan_fixup_callback(void *data, int framehook_id, struct ast_channel *old_chan, struct ast_channel *new_chan) include/asterisk/framehook.h:216: warning: argument 'The' of command @param is not found in the argument list of ast_framehook_chan_fixup_callback(void *data, int framehook_id, struct ast_channel *old_chan, struct ast_channel *new_chan) include/asterisk/framehook.h:216: warning: argument 'The' of command @param is not found in the argument list of ast_framehook_chan_fixup_callback(void *data, int framehook_id, struct ast_channel *old_chan, struct ast_channel *new_chan) include/asterisk/framehook.h:203: warning: argument 'The' of command @param is not found in the argument list of ast_framehook_consume_callback(void *data, enum ast_frame_type type) include/asterisk/framehook.h:203: warning: argument 'The' of command @param is not found in the argument list of ast_framehook_consume_callback(void *data, enum ast_frame_type type) include/asterisk/framehook.h:191: warning: argument 'The' of command @param is not found in the argument list of ast_framehook_destroy_callback(void *data) include/asterisk/framehook.h:159: warning: argument 'channel' of command @param is not found in the argument list of ast_framehook_event_callback(struct ast_channel *chan, struct ast_frame *frame, enum ast_framehook_event event, void *data) include/asterisk/framehook.h:159: warning: argument 'The' of command @param is not found in the argument list of ast_framehook_event_callback(struct ast_channel *chan, struct ast_frame *frame, enum ast_framehook_event event, void *data) include/asterisk/framehook.h:159: warning: argument 'The' of command @param is not found in the argument list of ast_framehook_event_callback(struct ast_channel *chan, struct ast_frame *frame, enum ast_framehook_event event, void *data) include/asterisk/framehook.h:159: warning: argument 'The' of command @param is not found in the argument list of ast_framehook_event_callback(struct ast_channel *chan, struct ast_frame *frame, enum ast_framehook_event event, void *data) include/asterisk/framehook.h:159: warning: argument 'The' of command @param is not found in the argument list of ast_framehook_event_callback(struct ast_channel *chan, struct ast_frame *frame, enum ast_framehook_event event, void *data) include/asterisk/framehook.h:1: warning: The following parameter of ast_framehook_event_callback(struct ast_channel *chan, struct ast_frame *frame, enum ast_framehook_event event, void *data) is not documented: parameter 'chan' include/asterisk/framehook.h:274: warning: return value 'On' of ast_framehook_attach has multiple documentation sections include/asterisk/framehook.h:390: warning: The following parameter of ast_framehook_list_contains_no_active_of_type(struct ast_framehook_list *framehooks, enum ast_frame_type type) is not documented: parameter 'type' {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-11-17 04:28:51.681-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-11-18 16:12:36.096-0600 Change 17530 merged by Kevin Harwell: frame: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17530|https://gerrit.asterisk.org/c/asterisk/+/17530] By: Friendly Automation (friendly-automation) 2021-11-18 16:12:47.322-0600 Change 17532 merged by Kevin Harwell: frame: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17532|https://gerrit.asterisk.org/c/asterisk/+/17532] By: Friendly Automation (friendly-automation) 2021-11-18 16:13:05.418-0600 Change 17531 merged by Kevin Harwell: frame: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17531|https://gerrit.asterisk.org/c/asterisk/+/17531] By: Friendly Automation (friendly-automation) 2021-11-18 16:13:20.987-0600 Change 17506 merged by Kevin Harwell: frame: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17506|https://gerrit.asterisk.org/c/asterisk/+/17506] | ||